[gd_scene load_steps=5 format=3 uid="uid://h4s54ikk4al3"]

[ext_resource type="Script" path="res://scripts/deckbuilding_phase/deckbuilding_scene.gd" id="1_dd58v"]
[ext_resource type="PackedScene" path="res://scenes/card_display/playable_card_3d.tscn" id="1_npbdc"]
[ext_resource type="PackedScene" uid="uid://dedijqnpjre4k" path="res://scenes/card_display/character_card_3d.tscn" id="2_pls58"]

[sub_resource type="Environment" id="Environment_gmyqr"]
background_mode = 3
background_color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="DeckbuildingScene" type="Node3D"]
script = ExtResource("1_dd58v")

[node name="CharacterDisplay" parent="." instance=ExtResource("2_pls58")]
unique_name_in_owner = true
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 7.75, 0)

[node name="CardArea" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Card1" parent="CardArea" instance=ExtResource("1_npbdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, -5.5, 0)

[node name="Card2" parent="CardArea" instance=ExtResource("1_npbdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, -5.5, 0)

[node name="Card3" parent="CardArea" instance=ExtResource("1_npbdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.5, 0)

[node name="Card4" parent="CardArea" instance=ExtResource("1_npbdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, -5.5, 0)

[node name="Card5" parent="CardArea" instance=ExtResource("1_npbdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, -5.5, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gmyqr")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="BackgroundColor" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="PlayerCharacterSelector" type="VBoxContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 76.0
offset_bottom = 233.0

[node name="Character1" type="Button" parent="Background/PlayerCharacterSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Character2" type="Button" parent="Background/PlayerCharacterSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Character3" type="Button" parent="Background/PlayerCharacterSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="PresetSelector" type="VBoxContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1100.0
offset_right = 1350.0
offset_bottom = 233.0

[node name="Preset1" type="Button" parent="Background/PresetSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Preset2" type="Button" parent="Background/PresetSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Preset3" type="Button" parent="Background/PresetSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="OpponentCharacterSelector" type="VBoxContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 233.0
grow_horizontal = 0

[node name="Character1" type="Button" parent="Background/OpponentCharacterSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Character2" type="Button" parent="Background/OpponentCharacterSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Character3" type="Button" parent="Background/OpponentCharacterSelector"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="CardCounts" type="HBoxContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 900.0
offset_right = 1920.0
offset_bottom = 960.0
alignment = 1

[node name="CardCount1" type="Label" parent="Background/CardCounts"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCount2" type="Label" parent="Background/CardCounts"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCount3" type="Label" parent="Background/CardCounts"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCount4" type="Label" parent="Background/CardCounts"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCount5" type="Label" parent="Background/CardCounts"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Jouer"

[connection signal="pressed" from="Background/PlayerCharacterSelector/Character1" to="." method="on_ally_character_selected" binds= [0]]
[connection signal="pressed" from="Background/PlayerCharacterSelector/Character2" to="." method="on_ally_character_selected" binds= [1]]
[connection signal="pressed" from="Background/PlayerCharacterSelector/Character3" to="." method="on_ally_character_selected" binds= [2]]
[connection signal="pressed" from="Background/PresetSelector/Preset1" to="." method="on_preset_selected" binds= [0]]
[connection signal="pressed" from="Background/PresetSelector/Preset2" to="." method="on_preset_selected" binds= [1]]
[connection signal="pressed" from="Background/PresetSelector/Preset3" to="." method="on_preset_selected" binds= [2]]
[connection signal="pressed" from="Background/PlayButton" to="." method="_on_apply"]
